<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="app_launch_config">App Launch Config</string>
    <string name="app_name">Chinese Paladin</string>
    <string name="as_axis">As Axis</string>
    <string name="as_button">As Button</string>
    <string name="bottom">Bottom</string>
    <string name="button_bottom">Button (Bottom)</string>
    <string name="button_left">Button (Left)</string>
    <string name="button_right">Button (Right)</string>
    <string name="button_top">Button (Top)</string>
    <string name="cancel">Cancel</string>
    <string name="center">Center</string>
    <string name="change">Change</string>
    <string name="change_dir">Change\nDirectory</string>
    <string name="chinese_paladin_logo">Chinese Paladin Logo</string>
    <string name="choose_dir">Choose Directory</string>
    <string name="close_app">Close the game?</string>
    <string name="coming_soon">Feature is coming soon</string>
    <string name="current">Current:&#160;</string>
    <string name="current_dir">Current Directory</string>
    <string name="disable">Disable</string>
    <string name="dont_ask_again">Don\'t ask me again</string>
    <string name="enable">Enable</string>
    <string name="error">Error</string>
    <string name="error_create_dir">App is not able to create a directory. Please manuall create a readable/writable directory:&#160;</string>
    <string name="exec_module">Execute Module</string>
    <string name="fixit">Fix It</string>
    <string name="full">Full</string>
    <string name="function">Function</string>
    <string name="gallery">Gallery</string>
    <string name="gamepad_arrow_button">GamePad Arrow Button</string>
    <string name="gamepad_opacity">Opacity</string>
    <string name="gamepad_pos">Position</string>
    <string name="gamepad_size">Size</string>
    <string name="hide">Hide</string>
    <string name="key_cfg_mode">Key Config Mode ( END:MENU_KEY )</string>
    <string name="key_config">Key Config</string>
    <string name="landscape">Landscape</string>
    <string name="left">Left</string>
    <string name="linear_filtering">Linear Filtering</string>
    <string name="missing_file">Following files are missing.</string>
    <string name="mouse_cursor">Mouse Cursor</string>
    <string name="never_show">Never Show Config Again?</string>
    <string name="never_show_disc">The config page will never show when launch the game. Are you sure?</string>
    <string name="no">No</string>
    <string name="no_applaunchconfig">Do not use AppLaunchConfig</string>
    <string name="no_other_options">No Other Options</string>
    <string name="ok">OK</string>
    <string name="portrait">Portrait</string>
    <string name="press_key_btn">Press KEY/BUTTON</string>
    <string name="quit">Quit</string>
    <string name="r_landscape">Reverse Landscape</string>
    <string name="r_portrait">Reverse Portrait</string>
    <string name="right">Right</string>
    <string name="run">Start Game</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="screen_ratio">Screen Ratio</string>
    <string name="select_key_func">Select Key Function</string>
    <string name="set_dir">Set Directory</string>
    <string name="show">Show</string>
    <string name="smooth_video">Smooth Video?</string>
    <string name="swap">Swap</string>
    <string name="top">Top</string>
    <string name="touch_mode">Touch Mode</string>
    <string name="touch_mode_gamepad">GamePad</string>
    <string name="touch_mode_invalid">None</string>
    <string name="touch_mode_touch">Touch</string>
    <string name="touch_mode_trackpad">TrackPad</string>
    <string name="unknown">Unknown</string>
    <string name="unziping">Unziping Files</string>
    <string name="video_depth">Video Depth</string>
    <string name="video_pos">Video Position</string>
    <string name="video_x_margin">Video X-Margin</string>
    <string name="video_x_pos">Video\nX-Position</string>
    <string name="video_y_margin">Video Y-Margin</string>
    <string name="video_y_pos">Video\nY-Position</string>
    <string name="yes">Yes</string>

    <string-array name="settings">
        <item>Touch Mode</item>
        <item>GamePad Settings</item>
        <item>Video Position</item>
        <item>Language (Restart)</item>
        <item>Cheats</item>
        <!-- <item>App Launch Config</item> -->
        <item>Quit</item>
        <!-- <item>Key Config</item> -->
        <!-- <item>Mouse Cursor</item> -->
    </string-array>
    
    <string-array name="cheatingItems">
        <item>Money</item>
        <item>Xiaoyao Lee</item>
        <item>Linger Zhao</item>
        <item>Yueru Lin</item>
        <item>Anu</item>
    </string-array>

    <string name="cp_menu_sub_gamepad_size_small">Tiny</string>
    <string name="cp_menu_sub_gamepad_size_medium">Medium</string>
    <string name="cp_menu_sub_gamepad_size_large">Huge</string>
    <string name="cp_menu_sub_gamepad_pos_top">Top</string>
    <string name="cp_menu_sub_gamepad_pos_center">Center</string>
    <string name="cp_menu_sub_gamepad_pos_bottom">Bottom</string>
    <string name="cp_menu_sub_gamepad_opacity_full">0%</string>
    <string name="cp_menu_sub_gamepad_opacity_half">50%</string>
    <string name="cp_menu_sub_gamepad_opacity_none">100%</string>

</resources>