<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/video_x_pos" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_x_pos_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/radio_x_pos_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center" />
            <RadioButton
                android:id="@+id/radio_x_pos_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/video_y_pos" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_y_pos_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/radio_y_pos_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center" />
            <RadioButton
                android:id="@+id/radio_y_pos_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>